--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -13,4 +13,5 @@
     <string name="prompt_password">Password</string>
     <string name="prompt_email">Password</string>
     <string name="title_activity_login">Login</string>
+    <string name="cred_erradas">Email e/ou password errada(s)</string>
 </resources>
