--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="noaccount">No Account? Sign Up Here</string>
+    <string name="cred_erradas">Wrong Email and/or password</string>
 </resources>
