--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -14,4 +14,5 @@
     <string name="prompt_email">Password</string>
     <string name="title_activity_login">Login</string>
     <string name="cred_erradas">Email e/ou password errada(s)</string>
+    <string name="accountCreated">Conta Criada! Pode entrar!</string>
 </resources>
