--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,13 +13,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="noaccount">No Account? Sign Up Here</string>
     <string name="cred_erradas">Wrong Email and/or password</string>
-    <string name="title_activity_dashboard">Dashboard</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="prompt_nova_password">New Password</string>
+    <string name="prompt_conf_password">Repeat Password</string>
     <string name="accountCreated">Account Created! You can login now!</string>
 </resources>
