--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -17,4 +17,16 @@
     <string name="accountCreated">Conta Criada! Pode entrar!</string>
     <string name="prompt_nova_password">Nova Password</string>
     <string name="prompt_conf_password">Repita a Password</string>
+    <string name="reviewParque">Review Parque</string>
+    <string name="reviewParqueComentario">Comentário</string>
+    <string name="reviewParqueBotaoSubmeter">Submeter</string>
+    <string name="registoTitulocraiarConta">Criação de Conta</string>
+    <string name="registoETnome">Nome</string>
+    <string name="registoETemail">Email</string>
+    <string name="registoETpassword">Password</string>
+    <string name="registoETcontacto">Contacto</string>
+    <string name="registoETfazerlogin">Já tem conta? Faça o login.</string>
+    <string name="registoETBotaoRegistar">Registar</string>
+    <string name="perfilboataoAtualizar">Atualizar</string>
+    <string name="alterarperfilPass">Alterar Password</string>
 </resources>
