--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,16 @@
     <string name="prompt_nova_password">New Password</string>
     <string name="prompt_conf_password">Repeat Password</string>
     <string name="accountCreated">Account Created! You can login now!</string>
+    <string name="reviewParque">Park Review</string>
+    <string name="reviewParqueComentario">Comment</string>
+    <string name="reviewParqueBotaoSubmeter">Submit</string>
+    <string name="registoTitulocraiarConta">Account Creation</string>
+    <string name="registoETnome">Name</string>
+    <string name="registoETemail">Email</string>
+    <string name="registoETpassword">Password</string>
+    <string name="registoETcontacto">Contact</string>
+    <string name="registoETfazerlogin">Already have an account? Do it Log in.</string>
+    <string name="registoETBotaoRegistar">Register</string>
+    <string name="perfilboataoAtualizar">Update</string>
+    <string name="alterarperfilPass">Change Password</string>
 </resources>
