--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,27 @@
     <string name="prompt_nova_password">New Password</string>
     <string name="prompt_conf_password">Repeat Password</string>
     <string name="accountCreated">Account Created! You can login now!</string>
+    <string name="bilhete_textvview">Ticket</string>
+    <string name="bilhete_textview2">Fill in the data</string>
+    <string name="edit_minutos">Time (minutes)</string>
+    <string name="btn_confirm">Confirm</string>
+    <string name="cartao_multi">Credit Card</string>
+    <string name="cartao_info">Fill in your Credit Card info:</string>
+    <string name="cartao_nome">Card Name</string>
+    <string name="cartao_numeros">Card Numbers</string>
+    <string name="cartao_data">Card Validity</string>
+    <string name="cartao_ccv">CCV</string>
+    <string name="mbway_contacto">Phone Number</string>
+    <string name="mbway_text">Fill in your Mbway number:</string>
+    <string name="mbway">Mbway</string>
+    <string name="ticket_history">Ticket History</string>
+    <string name="no_tickets">NO TICKETS</string>
+    <string name="reservation_dettails">Reservation Details</string>
+    <string name="info_ticket">Information about your Ticket:</string>
+    <string name="hora_entrada">Entry Time</string>
+    <string name="time_chosen">Time Chosen</string>
+    <string name="Price">Price</string>
+    <string name="pay">PAY</string>
+    <string name="payment">Payment</string>
+    <string name="payment_method_text">Choose Payment Method:</string>
 </resources>
